@@ -22,8 +22,6 @@ import java.io.IOException;
 
 import java.util.List;
 import java.util.ArrayList;
-import java.util.Deque;
-import java.util.ArrayDeque;
 
 //
 //
@@ -33,7 +31,7 @@ import java.util.ArrayDeque;
 class StationCalculation
 {
 	// local helper classes
-	Deque<OneStation> statrec = new ArrayDeque<OneStation>();
+	List<OneStation> statrec = new ArrayList<OneStation>();
 
 	// values to show how much is done.
 	public int nstations = 0;
@@ -227,12 +225,12 @@ System.out.println("Copy recurse " + tunnel.name + " " + bFullNameMangle);
 	void CalcPosFrom(OneStation los, Vec3 lLoc)
 	{
 		los.Loc = new Vec3(lLoc.x, lLoc.y, lLoc.z);
-		statrec.addFirst(los);
+		statrec.add(los);
 		nstationsdone++;
 
 		while (!statrec.isEmpty())
 		{
-			OneStation os = statrec.removeFirst();
+			OneStation os = statrec.remove(statrec.size() - 1);
 			for (OneLeg ol : os.olconn)
 			{
 				if (ol.bnosurvey)
@@ -242,14 +240,14 @@ System.out.println("Copy recurse " + tunnel.name + " " + bFullNameMangle);
 					nstationsdone++;
 					OneStation osn = ol.osto;
 					osn.Loc = Vec3.GoLeg(os.Loc, ol.m, +1);
-					statrec.addFirst(osn);
+					statrec.add(osn);
 				}
 				if ((os == ol.osto) && (ol.osfrom.Loc == null))
 				{
 					nstationsdone++;
 					OneStation osn = ol.osfrom;
 					osn.Loc = Vec3.GoLeg(os.Loc, ol.m, -1);
-					statrec.addFirst(osn);
+					statrec.add(osn);
 				}
 			}
 		}
